<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.NovoProdutoEmpresaActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editProdutoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/txt_nome_produto"
            android:inputType="textCapWords"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editProdutoDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/txt_descricao"
            android:inputType="none|textCapSentences"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editProdutoPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/txt_preco"
            android:inputType="none|numberDecimal"
            android:padding="16dp" />

        <Button
            android:id="@+id/buttonAcesso2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="validarDadosProduto"
            android:padding="16dp"
            android:text="@string/txt_salvar"
            android:theme="@style/botaoPadrao" />

    </LinearLayout>

</LinearLayout>