<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ConfiguracoesUsuarioActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagePerfilUsuario"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/perfil" />

        <EditText
            android:id="@+id/editUsuarioNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/txt_nome"
            android:inputType="textCapWords"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editUsuarioEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/txt_endereco_completo"
            android:inputType="none|textCapSentences"
            android:padding="16dp" />

        <!--

        <EditText
            android:id="@+id/editEmpresaTempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/txt_tempo_entrega"
            android:inputType="none|text"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editEmpresaTaxa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/txt_taxa_entrega"
            android:inputType="none|numberDecimal"
            android:padding="16dp" />

            -->

        <Button
            android:id="@+id/buttonAcesso2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="validarDadosUsuario"
            android:padding="16dp"
            android:text="@string/txt_salvar"
            android:theme="@style/botaoPadrao" />

    </LinearLayout>


</LinearLayout>